font family changed for paragraphs in main body

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,11 @@ body h1, body h2, body li {
     font-weight: 700;
     text-transform: uppercase;
 }
+
+body p {
+    font-family: 'Montserrat', sans-serif;
+    line-height: 35px;
+}
 header {
     background-color: #B1CC74;
     height: 150px;
