--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
     margin: 0; 
     padding: 0;
     color: #ffffff;
+    font-family: 'Montserrat', sans-serif;
 }
 body {
     display: flex;
@@ -17,23 +18,39 @@ body h1, body h2, body li {
 }
 
 body p {
-    font-family: 'Montserrat', sans-serif;
     line-height: 35px;
 }
+/* Header Styles */
 header {
     background-color: #B1CC74;
     height: 150px;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
     flex: 1;
 }
 header h1 {
     padding: 35px;
 }
+/* Nav Styles*/
 nav {
     position: absolute;
     width: 100%;
     left: 0;
+    top: 242px;
     background-color: #B1CC74; 
     display: none;
+    flex: 2;
+}
+#nav-dropdown-toggle:checked~nav {
+    display: block;
+}
+#nav-dropdown-toggle {
+    display: none;
+}
+.nav-dropdown-toggle-label {
+    font-size: 2rem;
+    padding: 15px;
 }
 nav ul {
     list-style-type: none;
@@ -68,11 +85,12 @@ nav a:hover{
     background-color: #ffffff;
     color: #B1CC74;
 }
+/* Main Body Styles */
 main {
     background-color: #E8FCC2;
     height: 100vh;
     padding: 50px;
-    flex: 2;
+    flex: 3;
 }
 section, aside {
     margin-bottom: 50px;
@@ -86,9 +104,10 @@ section p, aside p {
     padding: 15px;
 
 }
+/* Footer Styles */
 footer {
     background-color: #B1CC74;
     height: 75px;
     padding: 25px;
-    flex: 3;
+    flex: 4;
 }
