--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,6 @@ nav {
     width: 100%;
     left: 0;
     top: 242px;
-    background-color: #B1CC74; 
     display: none;
     flex: 2;
 }
@@ -57,29 +56,20 @@ nav ul {
     text-align: center;
     margin-top: 30px;
 }
-nav li {
-    margin: 40px;
-}
 
 li a {
     text-decoration: none;
     color: #ffffff;
+    font-family: 'Kanit', sans-serif;
+    font-weight: 400;
+    letter-spacing: 1px;
 }
 nav a {
-    background-color: #B1CC74;
-    color: #ffffff;
     padding: 10px;
     margin: 40px;
-    border-radius: 5px;
-    box-shadow: #000000 0px 1px 10px;
 }
 nav a:hover{
-    background-color: #ffffff;
-    color: #B1CC74;
-    padding: 10px;
-    margin: 40px;
-    border-radius: 5px;
-    box-shadow: #000000 0px 1px 10px;
+    border-bottom: 1px solid #ffffff;
 }
 .active {
     background-color: #ffffff;
@@ -110,4 +100,51 @@ footer {
     height: 75px;
     padding: 25px;
     flex: 4;
+}
+/* Responsive Layout for Tablets */
+@media screen and (min-width: 768px) {
+    header {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .active {
+        border-radius: 5px;
+    }
+    nav {
+        display: block;
+        position: relative;
+        width: fit-content;
+        padding-right: 20px;
+        top: 0;
+    }
+    .navigation-bar {
+        display: flex;
+    }
+
+    .navigation-bar > li {
+        padding: 1rem;
+        text-align: center;
+    }
+
+    nav a {
+        background-color: #B1CC74;
+        color: #ffffff;
+        padding: 5px;
+        margin: 10px;
+        box-shadow: none;
+    }
+
+    .nav-dropdown-toggle-label {
+        display: none;
+    }
+}
+/* Responsive Layout for Laptops */
+@media screen and (min-width: 992px) {
+   
+}
+
+/* Responsive Layout for Desktops */
+@media screen and (min-width: 1200px) {
+
 }
