--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,13 @@ section p, aside p {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
+/* Hero Image */
+.hero-image {
+    width: 100%;
+    height: 300px;
+    margin: 0;
+    background: url(../images/top-view-table-full-delicious-food-composition.jpg) no-repeat center center/cover;
+}
 /* Footer Styles */
 footer {
     background-color: #B1CC74;
