--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,7 @@ nav {
     display: none;
     flex: 2;
     border-bottom: 3px solid #545F66;
+    z-index: 1;
 
 }
 #nav-dropdown-toggle:checked~nav {
@@ -122,9 +123,30 @@ section p, aside p {
 /* Hero Image */
 .hero-image {
     width: 100%;
-    height: 300px;
+    height: 500px;
     margin: 0;
     background: url(../images/top-view-table-full-delicious-food-composition.jpg) no-repeat center center/cover;
+    z-index: -1;
+}
+.cover-text {
+    position: absolute;
+    margin: 0 1px;
+    top: 62%;
+}
+.cover-text h2 {
+    padding: 15px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    background-color: rgba(84, 95, 102, 0.8);
+    margin: 0 50px;
+    border-bottom: 3px solid rgba(208, 244, 234, 0.8);
+}
+.cover-text p {
+    padding: 15px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: rgba(130, 147, 153, 0.8);
+    margin: 0 50px;
 }
 /* Footer Styles */
 footer {
@@ -171,6 +193,12 @@ footer h2 {
     .nav-dropdown-toggle-label {
         display: none;
     }
+
+    .cover-text {
+        position: absolute;
+        margin: 0 1px;
+        top: 50%;
+    }
 }
 /* Responsive Layout for Laptops */
 @media screen and (min-width: 992px) {
@@ -178,9 +206,16 @@ footer h2 {
         margin: 0;
         padding: 0;
     }
+
+    .cover-text {
+        position: absolute;
+        margin: 0 1px;
+        top: 72%;
+    }
 }
 
 /* Responsive Layout for Desktops */
 @media screen and (min-width: 1200px) {
+   
     
 }
