--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,11 +189,13 @@ aside li {
 /* Newsletter Signup Form */
 .newsletter {
         background-color: #829399;
-        padding: 15px;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
         display: flex;
         flex-direction: column;
+}
+.newsletter-form p {
+    background-color: #545F66;
+    border-radius: 0;
+    border-bottom: 3px solid #D0F4EA;
 }
 
 #sign-up-heading {
@@ -206,9 +208,11 @@ aside li {
 .newsletter-input {
     align-items: center;
     margin-bottom: 30px;
+    padding: 15px;
 }
 .newsletter-radio {
     margin-bottom: 30px;
+    padding: 15px;
 }
 .bars {
     margin: 5px;
@@ -228,10 +232,19 @@ input[type="radio"]
     height: 2rem;
 }
 .newsletter-button {
+    padding: 5px;
     text-align: center;
+    background-color: #545F66;
+    border-top: 3px solid #D0F4EA;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 .newsletter-button .newsletter-sign-up {
     background-color: #545F66;
+    font-family: 'Kanit', sans-serif;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 1px;
     padding: 5px;
     border: 0;
 }
