--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ header {
     justify-content: space-between;
     align-items: baseline;
     flex: 1;
-    border-bottom: 3px solid #545F66;
+    border-bottom: 3px solid #D0F4EA;
 }
 header h1 {
     padding: 0 20px 20px 20px;
@@ -49,7 +49,7 @@ nav {
     top: 270px;
     display: none;
     flex: 2;
-    border-bottom: 3px solid #545F66;
+    border-bottom: 3px solid #D0F4EA;
     z-index: 1;
 
 }
@@ -107,25 +107,18 @@ section, aside {
 #sec-resources h2, aside h2 {
     background-color: #545F66;
     padding: 15px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
     border-bottom: 3px solid #D0F4EA;
 }
 .resources {
     background-color: #545F66;
-    border-radius: 10px;
 }
 section p, aside p {
     background-color: #829399;
     padding: 15px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
 }
 .aside-columns ul {
     width: 100%;
     background-color: #829399;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
     margin: 0;
 }
 aside li {
@@ -143,6 +136,7 @@ aside li {
     margin: 0;
     background: url(../images/top-view-table-full-delicious-food-composition.jpg) no-repeat center center/cover;
     z-index: -1;
+    border-bottom: 3px solid #D0F4EA;
 }
 .cover-text {
     width: 90%;
@@ -154,16 +148,12 @@ aside li {
 }
 .cover-text h2 {
     padding: 10px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
     background-color: rgba(84, 95, 102, 0.9);
     margin: 0;
     border-bottom: 3px solid rgba(208, 244, 234, 0.9);
 }
 .cover-text p {
     padding: 10px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
     background-color: rgba(130, 147, 153, 0.9);
     margin: 0;
 }
@@ -201,8 +191,6 @@ aside li {
 #sign-up-heading {
     background-color: #545F66;
     padding: 15px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
     border-bottom: 3px solid #D0F4EA;
 }
 .newsletter-input {
@@ -232,12 +220,11 @@ input[type="radio"]
     height: 2rem;
 }
 .newsletter-button {
-    padding: 5px;
+    word-spacing: 5px;
     text-align: center;
     background-color: #545F66;
     border-top: 3px solid #D0F4EA;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    cursor: pointer;
 }
 .newsletter-button .newsletter-sign-up {
     background-color: #545F66;
@@ -247,12 +234,13 @@ input[type="radio"]
     letter-spacing: 1px;
     padding: 5px;
     border: 0;
+    cursor: pointer;
 }
 /* Footer Styles */
 footer {
     background-color: #B1CC74;
     flex: 4;
-    border-top: 3px solid #545F66;
+    border-top: 3px solid #D0F4EA;
     height: 150px;
     padding: 40px;
 }
@@ -322,8 +310,6 @@ footer .social-media {
 
     .aside-columns ul {
         background-color: #829399;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
     }
     .essentials {
         width: 50%;
