--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ main {
 section, aside {
     margin-bottom: 50px;
 }
-#sec-resources h2, aside h2 {
+section h2, aside h2 {
     background-color: #545F66;
     padding: 15px;
     border-bottom: 3px solid #D0F4EA;
@@ -142,6 +142,14 @@ aside li {
     height: 700px;
     margin: 0;
     background: url(../images/top-view-table-full-delicious-food-composition.jpg) no-repeat center center/cover;
+    z-index: -1;
+    border-bottom: 3px solid #D0F4EA;
+}
+.hero-image2 {
+    width: 100%;
+    height: 700px;
+    margin: 0;
+    background: url(../images/turkey-sweet-potato-breakfast-hash.webp) no-repeat center center/cover;
     z-index: -1;
     border-bottom: 3px solid #D0F4EA;
 }
