background colour added to recipe section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,6 +274,9 @@ input[type="radio"]
     letter-spacing: 1px;
     padding: 5px 15px;
 }
+.breakfast-recipies ol {
+    background-color: #829399;
+}
 .banana-pancakes li, .bacon-and-eggs li, .overnight-oats li, .breakfast-frittata li, .blueberry-ricotta li, .breakfast-quesadillas li {
     text-transform: none;
 }
